# sala-de-estudos-flask

./: .gitignore  .secrets.toml.example  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  sala-de-estudos-flask-docker-stack.yml  settings.toml  setup.py
.github/workflows/: build_deploy.yml
migrations/: env.py
migrations/versions/: 03380bddfa30_creating_subjects_and_professors_.py  233af3faa7df_creating_evaluations_and_evaluation_.py  883a2db3d291_creating_lessons_and_professors_lessons_.py  8a9b572cfa1c_admin_adjustments.py  937619cef753_adding_column_material_design_icon_to_.py  b72c497938d8_adding_telegram_link_to_subjects_table.py  ca3427b4127e_creating_professors_table.py  d682e7dfd646_initializing_database.py  d9d9709d357d_modifying_lessons_table_for_save_info_.py  da830b27bad5_lesson_id_on_lesson_data_mus_be_unique.py  ebcfb72e9c2a_creating_lesson_datas_table.py  fd57f64255da_.py
sala_de_estudos_flask/: app.py  development.sqlite
sala_de_estudos_flask/ext/: config.py  migrate.py
sala_de_estudos_flask/ext/admin/: __init__.py  evaluations_view.py  lessons_admin.py  professors_admin.py  subjects_admin.py
sala_de_estudos_flask/ext/api/: __init__.py  routes.py  routes.yaml
sala_de_estudos_flask/ext/cli/: __init__.py
sala_de_estudos_flask/ext/dao/: lesson_data_dao.py  lessons_dao.py  subject_dao.py
sala_de_estudos_flask/ext/db/: __init__.py  commands.py
sala_de_estudos_flask/ext/models/: __init__.py  evaluations.py  lesson_data.py  lesson_datas.py  lessons.py  professors.py  subjects.py
tests/: test_sala_de_estudos_flask.py
(+5 files in other folders)
