[tool.poetry]
name = "sala-de-estudos-flask"
version = "1.2.2"
description = ""
authors = ["Thiago da Cunha Borges <thiagoborges@id.uff.br>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
gunicorn = "^20.0.4"
dynaconf = "^3.1.0"
Flask-Migrate = "^2.5.3"
ipdb = "^0.13.3"
flask-admin = "^1.5.6"
psycopg2-binary = "^2.8.5"
flask-wtf = "^0.14.3"
email_validator = "^1.1.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-flask = "^1.0.0"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
black = "^20.8b1"
flake8 = "^3.8.3"
flask-debugtoolbar = "^0.11.0"
flask-shell-ipython = "^0.4.1"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
